fixed some spacing

--- a/css/index.css
+++ b/css/index.css
@@ -248,6 +248,6 @@ nav a{
     width: 8vw;
 }
 
-.strategytext{
-
+.together{
+    margin: 3vh auto;
 }
